--- a/Unidad 1/Primer html/semantica.html
+++ b/Unidad 1/Primer html/semantica.html
@@ -5,6 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantic</title>
+
+    <style>
+        header {
+            background-color: lightgray;
+        }
+
+        h1 {
+            font-size: 5rem;
+            color: blue;
+        }
+
+        nav ul li {
+            list-style: none;
+            font-weight: bold;
+            font-size: 2rem;
+            display: inline-block;
+            margin: 5px;
+            padding: 15px;
+            border-radius: 10px;
+            border: 1px solid red;
+            cursor: pointer;
+        }
+    </style>
+
+
 </head>
 
 <body>
@@ -15,9 +40,10 @@
 
         <nav>
             <ul>
-                <li>Option 1</li>
-                <li>Option 2</li>
-                <li>Option 3</li>
+                <li>Home</li>
+                <li>Archive</li>
+                <li>Save</li>
+                <li>Exit</li>
             </ul>
         </nav>
 
@@ -51,7 +77,7 @@
     </main>
 
     <footer>
-        <p>Copyrigth 2020</p>
+        <p>Copyrigth &copy; 2020</p>
         <p>Telephones</p>
         <p>Contact</p>
         <p>About To....</p>
