--- a/Unidad 1/Primer html/semantica.html
+++ b/Unidad 1/Primer html/semantica.html
@@ -21,11 +21,15 @@
             font-weight: bold;
             font-size: 2rem;
             display: inline-block;
-            margin: 5px;
             padding: 15px;
             border-radius: 10px;
             border: 1px solid red;
             cursor: pointer;
+        }
+
+        nav ul li:hover {
+            background-color: rgb(0, 171, 251);
+            color: white;
         }
     </style>
 
