--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica CSS 01</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
     <header>
         <img src="img/resplandor.png" alt="fondo">
-        <img src="img/logo.png" alt="logo">
+        <img src="img/logo.png" alt="logo" id="logo">
         <nav>
             <ul>
                 <li>Seccion</li>
@@ -26,16 +27,17 @@
             </form>
         </nav>
     </header>
-    <section>
+    <section id="seccion01">
+
         <article>
             <img src="img/slide2.jpg" alt="Slide">
         </article>
     </section>
-    <section>
+    <section id="section02">
         <article>
             <img src="img/separador.jpg" alt="separador">
             <br>
-            Una seccion
+            <span class="unaSeccion nito">Una seccion</span>
             <br>
             Lorem, ipsum dolor sit amet consectetur adipisicing
             elit. Voluptas tempora dolor eos suscipit magni ea
@@ -53,7 +55,7 @@
         <article>
             <img src="img/separador.jpg" alt="separador">
             <br>
-            Otra seccion
+            <span class="otraSeccion nito">Otra seccion</span>
             <br>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus ut quibusdam aspernatur excepturi
             in blanditiis voluptatem explicabo omnis reiciendis cum expedita laboriosam illo adipisci, molestias optio
@@ -68,7 +70,7 @@
         <article>
             <img src="img/separador.jpg" alt="separador">
             <br>
-            Un video
+            <span class="otraSeccion nito">Un video</span>
             <br>
             <img src="img/video.jpg" alt="video">
         </article>
