Practica 01 Menu de Navegación

--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -10,67 +10,62 @@
 
 <body>
     <header>
-        <img src="img/resplandor.png" alt="fondo">
+        <img src="img/resplandor.png" alt="Resplandor">
         <img src="img/logo.png" alt="logo" id="logo">
         <nav>
             <ul>
-                <li>Seccion</li>
+                <li>Incio</li>
                 <li>Seccion</li>
                 <li>Seccion</li>
                 <li>Seccion</li>
                 <li>Seccion</li>
                 <li>Seccion</li>
             </ul>
-            <form action="action">
-                <input type="text" placeholder="Buscar aqui">
-                <input type="Submit" placeholder="Buscar">
+
+            <form action="">
+                <input type="text" placeholder="Buscar Aqui">
+                <input type="submit" value="Buscar">
             </form>
         </nav>
     </header>
-    <section id="seccion01">
-
+    <section id="seccion1">
         <article>
-            <img src="img/slide2.jpg" alt="Slide">
+            <img src="img/slide2.jpg" alt="slide">
         </article>
     </section>
-    <section id="section02">
+    <section id="seccion2">
         <article>
             <img src="img/separador.jpg" alt="separador">
             <br>
-            <span class="unaSeccion nito">Una seccion</span>
+            <span class="unaSeccion nito">Una Seccion</span>
             <br>
-            Lorem, ipsum dolor sit amet consectetur adipisicing
-            elit. Voluptas tempora dolor eos suscipit magni ea
-            reprehenderit laudantium deleniti dolore nemo! Iusto
-            officiis iure molestias voluptate commodi laboriosam,
-            suscipit dolore fugiat?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti dolorem, facere officia sint quod ab enim
+            modi repellat est autem cum dicta, deserunt libero voluptates, illo quaerat voluptate rerum ullam!
             <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Reiciendis sequi aliquam quae asperiores ratione dolores
-            itaque vel fuga sapiente quod saepe hic maxime architecto
-            veritatis, molestias iure excepturi doloribus a!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident obcaecati nulla voluptatem laboriosam
+            harum sint quis nisi, perferendis accusamus officiis at rerum molestias velit modi distinctio aperiam!
+            Magnam, optio ducimus.
             <p></p>
-            <input type="submit" value="ver mas">
+            <input type="submit" value="Ver Mas">
         </article>
         <article>
             <img src="img/separador.jpg" alt="separador">
             <br>
-            <span class="otraSeccion nito">Otra seccion</span>
+            <span class="otraSeccion nito">Otra Seccion</span>
             <br>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus ut quibusdam aspernatur excepturi
-            in blanditiis voluptatem explicabo omnis reiciendis cum expedita laboriosam illo adipisci, molestias optio
-            ullam incidunt, eos impedit?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt commodi neque tempore rerum voluptatum
+            odit vero sunt, rem atque quo dolor nostrum eveniet unde blanditiis quia suscipit! Recusandae, sapiente
+            exercitationem?
             <br>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi accusamus praesentium suscipit, velit
-            voluptate corporis illum corrupti voluptatibus necessitatibus esse quasi aspernatur, cum atque, eaque vel
-            hic error non itaque.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero deleniti vel eum! Nam corporis quis deserunt,
+            ea tempora iste eius alias! Assumenda praesentium laboriosam cumque tenetur impedit qui, corrupti ea.
             <p></p>
-            <input type="submit" value="Ver mas">
+            <input type="submit" value="Ver Mas">
         </article>
         <article>
             <img src="img/separador.jpg" alt="separador">
             <br>
-            <span class="otraSeccion nito">Un video</span>
+            <span class="otraSeccion nite">Un video</span>
             <br>
             <img src="img/video.jpg" alt="video">
         </article>
