--- a/practica01css/index.html
+++ b/practica01css/index.html
@@ -65,7 +65,7 @@
         <article>
             <img src="img/separador.jpg" alt="separador">
             <br>
-            <span class="otraSeccion nite">Un video</span>
+            <span class="otraSeccion nito">Un video</span>
             <br>
             <img src="img/video.jpg" alt="video">
         </article>
